[gd_scene load_steps=3 format=3 uid="uid://be26rmrpdq3hi"]

[ext_resource type="Script" uid="uid://rh5w3ri2ft8k" path="res://UI/Recipes/RecipesInGrimoire.gd" id="1_fsqbl"]
[ext_resource type="Texture2D" uid="uid://cyueoxuksu1lj" path="res://Resources/Placeholders/Potions-Ingredients/Fantasy potions 30+/Potions/Mana Rank 1.png" id="1_nmnhj"]

[node name="RecipePanelContainer" type="PanelContainer"]
custom_minimum_size = Vector2(300, 125)
script = ExtResource("1_fsqbl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="RecipeNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Recipe Name"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 6
alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="RecipeTextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -57.5
offset_right = 57.5
offset_bottom = 57.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nmnhj")
expand_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="RecipeDescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Recipe Description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="SelectRecipeButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
text = "Select Recipe"
