## Recipes in the Grimoire
# Instantiate these into the grid container
extends PanelContainer

@onready var recipe_name_label: Label = %RecipeNameLabel
@onready var recipe_description_label: Label = %RecipeDescriptionLabel
@onready var select_recipe_button: Button = %SelectRecipeButton
@onready var recipe_texture_rect: TextureRect = %RecipeTextureRect
